--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ######################
-# Project Specific
+# Project Specific changed this file
 ######################
 /build/www/**
 /src/test/javascript/coverage/
